--- a/src/site/_includes/layouts/devicePage.njk
+++ b/src/site/_includes/layouts/devicePage.njk
@@ -21,14 +21,14 @@
       <h4 class="lower">Backcasting</h4>
       <span>The cool sister of forecasting, starting from the future and working back 😎</span>
     </a>
-    <a href="#" class="methodBox"> 
+    <a href="pages/devices/fourfutures" class="methodBox"> 
       <h4 class="lower">Four Futures</h4>
       <span>Laying out the crossroads of our futures and focusing on the desirable ones</span>
     </a>
   </div>
   <div class="methodRow">
-    <a href="#" class="methodBox"> 
-      <h4 class="lower">Speculative Toursim</h4>
+    <a href="pages/devices/speculativeTourism" class="methodBox"> 
+      <h4 class="lower">Speculative Tourism</h4>
       <span>An invitation to imagine the geographically possible</span>
     </a>
     <a href="pages/devices/backpackdevice" class="methodBox"> 
