--- a/src/site/_includes/layouts/introPage.njk
+++ b/src/site/_includes/layouts/introPage.njk
@@ -27,12 +27,12 @@
     </a>
   </div>
   <div class="methodRow">
-    <a href="#" class="methodBox"> 
+    <a href="pages/intros/now" class="methodBox"> 
       <h4>Science fiction - now!</h4>
       <span>Imagine Tomorrow! If you don't, someone else will do so for you!</span>
     </a>
-    <a href="#" class="methodBox"> 
-      <h4>Spectulation in a World of Prediction</h4>
+    <a href="pages/intros/prediction" class="methodBox"> 
+      <h4>Speculation in a World of Prediction</h4>
       <span>The data driven realities we are creating are always a perpetuation of the past</span>
     </a>
   </div>
