--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -19,25 +19,29 @@ title: Designing Tomorrow(s)
     <h2>Why design tomorrow?</h2>
     <p>What if we used this <span class="pulse">weirdness</span> to our advantage? What if, by forcing our imaginations to work with the <span class="pulse">weird</span>, to articulate the <span class="pulse">weird</span>, we could hack, break, and change the stories we tell ourselves about the future? Make these stories more inclusive, more decolonial, more radical?</p>
 </section>
+<section class="contentSlice">
+    <h2>What is this site for?</h2>
+    <p>This site is meant as a <span class="pulse">handbook</span> to help you think about, and design, tomorrow. Read the <span class="pulse">intros</span> below to find out more about why and how we created it. Or jump into one of the <span class="pulse">devices and methodologies</span> for ideas on how to run your own workshop!</p>
+</section>
 <section class="contentSlice sideBySide">
 <h2>Intros, engines, and foundations</h2>
-<h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
+<h3>The foundational texts that guide the Designing Tomorrow(s) project in designing the future</h3>
   <div class="methodRow">
-    <a href="/pages/intros/handbook" class="methodBox">
+    <a target="_blank" href="/pages/intros/handbook" class="methodBox">
       <h4>A Handbook for Desirable Futures</h4>
       <span>Exploring the importance of speculative methodologies</span>
     </a>
-    <a href="/pages/intros/tool" class="methodBox"> 
+    <a target="_blank" href="/pages/intros/tool" class="methodBox"> 
       <h4>Science Fiction as a Tool</h4>
       <span>Conceptualizing our radical future, near or far, inherently involves the imagination</span>
     </a>
   </div>
   <div class="methodRow">
-    <a href="pages/intros/canceltheapocalypse" class="methodBox"> 
+    <a target="_blank" href="pages/intros/canceltheapocalypse" class="methodBox"> 
       <h4>Cancel the Apocalypse!</h4>
       <span>Imagine Tomorrow! If you don't, someone else will do so for you!</span>
     </a>
-    <a href="pages/intros/prediction" class="methodBox"> 
+    <a target="_blank" href="pages/intros/prediction" class="methodBox"> 
       <h4>Spectulation in a World of Prediction</h4>
       <span>The data driven realities we are creating are always a perpetuation of the past</span>
     </a>
@@ -46,46 +50,46 @@ title: Designing Tomorrow(s)
 <h2>Backpacks, devices, and trains </h2>
 <h3>Speculative design methodologies and case studies to build powerful, speculative workshops</h3>
   <div class="methodRow">
-    <a href="pages/devices/backcasting" class="methodBox">
+    <a target="_blank" href="pages/devices/backcasting" class="methodBox">
       <h4 class="lower">Backcasting</h4>
       <span>The cool sister of forecasting, starting from the future and working back 😎</span>
     </a>
-    <a href="pages/devices/fourfutures" class="methodBox"> 
+    <a target="_blank" href="pages/devices/fourfutures" class="methodBox"> 
       <h4 class="lower">Four Futures</h4>
       <span>Laying out the crossroads of our futures and focusing on the desirable ones</span>
     </a>
   </div>
   <div class="methodRow">
-    <a href="#" class="methodBox"> 
+    <a target="_blank" href="pages/devices/speculativeTourism" class="methodBox"> 
       <h4 class="lower">Speculative Tourism</h4>
       <span>An invitation to imagine the geographically possible</span>
     </a>
-    <a href="pages/devices/backpackdevice" class="methodBox"> 
+    <a target="_blank" href="pages/devices/backpackdevice" class="methodBox"> 
       <h4 class="lower">The Backpack and The Device</h4>
       <span>What devices can be found in the backpacks of our future selves?</span>
     </a>
   </div>
   <section class="contentSlice sideBySide">
-<h2>Intros, engines, and foundations</h2>
-<h3>The foundational texts that guide the Designing Tomorrow(s) project in hacking the future</h3>
+<h2>Futures, inspirations, and roadmaps</h2>
+<h3>While you're here, why not read some masterpieces?</h3>
   <div class="methodRow">
-    <a href="#" class="methodBox">
-      <h4 class="lowest">A Handbook for Desirable Futures</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    <a target="_blank" href="https://www.alibris.com/The-Lathe-of-Heaven-Ursula-K-Le-Guin/book/3765183" class="methodBox">
+      <h4 class="lowest">UKL - The Lathe of Heaven</h4>
+      <span>On the dangers of getting what you want, especially the future</span>
     </a>
-    <a href="#" class="methodBox"> 
-      <h4 class="lowest">Science Fiction as a Tool</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    <a target="_blank" href="https://www.alibris.com/Oval-Elvia-Wilk/book/42571865?matches=30" class="methodBox"> 
+      <h4 class="lowest">Eliva Wilk - Oval</h4>
+      <span>Who is the future for and might we imagine someone else?</span>
     </a>
   </div>
   <div class="methodRow">
-    <a href="#" class="methodBox"> 
-      <h4 class="lowest">Science fiction - now!</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    <a target="_blank" href="https://www.alibris.com/Sorrowland-Rivers-Solomon/book/48616112?matches=99" class="methodBox"> 
+      <h4 class="lowest">Rivers Solomon - Sorrowland</h4>
+      <span>What will we bring us from the present and how do we move past that?</span>
     </a>
-    <a href="#" class="methodBox"> 
-      <h4 class="lowest">Spectulation in a World of Prediction</h4>
-      <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit</span>
+    <a target="_blank" href="https://www.alibris.com/Termush-Faber-Editions-A-classic-stunning-dangerous-darkly-beautiful-Jeff-VanderMeer-Sven-Holm/book/52691727?matches=6" class="methodBox"> 
+      <h4 class="lowest">Sven Holm - Termush</h4>
+      <span>Is the end of the world really all its cracked up to be?</span>
     </a>
   </div>
 </section>
