--- a/src/site/_includes/social.njk
+++ b/src/site/_includes/social.njk
@@ -1,7 +1,7 @@
 <meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:site" content="ElevenTail" />
-<meta name="twitter:creator" content="@philhawksworth" />
-<meta property="og:url" content="https://eleventail.netlify.com/" />
-<meta property="og:title" content="ElevenTail" />
-<meta property="og:description" content="{%- if description -%}{{ description }}{%- else -%}A running start for JAMstack projects with Eleventy, TailwindCSS and some Netlify goodies{%- endif -%}" />
-<meta property="og:image" content='https://eleventail.netlify.com/images/og-card.jpg' />
+<meta name="twitter:site" content="Designing Tomorrow" />
+<meta name="twitter:creator" content="@tallesteden" />
+<meta property="og:url" content="www.designingtomorrow.io" />
+<meta property="og:title" content="Designing Tomorrow" />
+<meta property="og:description" content="{%- if description -%}{{ description }}{%- else -%}A handbook to help you think about, and design, tomorrow{%- endif -%}" />
+<meta property="og:image" content='https://designingtomorrows.io/images/wideFuture2.jpg' />
