--- a/src/site/_includes/social.njk
+++ b/src/site/_includes/social.njk
@@ -5,4 +5,4 @@
 <meta property="og:title" content="Designing Tomorrow" />
 <meta property="og:description" content="{%- if description -%}{{ description }}{%- else -%}A handbook to help you think about, and design, tomorrow{%- endif -%}" />
 <meta property="og:image" content='https://designingtomorrows.io/images/wideFuture2.jpg' />
-<link rel="icon" type="image/x-icon" href="	https://designingtomorrows.io/images/favicon.ico">
+<link rel="icon" type="image/x-icon" href="	https://designingtomorrows.io/images/favicon.svg">
