--- a/src/site/_includes/footer.njk
+++ b/src/site/_includes/footer.njk
@@ -1,3 +1,3 @@
 <footer class="mainFooter">
-    <span>Built with ♥ using Eleventy</span>
+    <span>Built with ♥ using Eleventy under the MIT License</span>
 </footer>
