--- a/src/site/index.njk
+++ b/src/site/index.njk
@@ -42,7 +42,7 @@ title: Designing Tomorrow(s)
       <span>Imagine Tomorrow! If you don't, someone else will do so for you!</span>
     </a>
     <a target="_blank" href="pages/intros/prediction" class="methodBox"> 
-      <h4>Spectulation in a World of Prediction</h4>
+      <h4>Speculation in a World of Prediction</h4>
       <span>The data driven realities we are creating are always a perpetuation of the past</span>
     </a>
   </div>
